// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="abs-width-600"
>
  <p
    className="big-spacer-bottom"
  >
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "all_set",
        ]
      }
      translationKey="onboarding.tutorial.ci_outro.all_set"
    />
  </p>
  <div
    className="display-flex-row big-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/commit.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.ci_outro.commit
        </strong>
      </p>
      <p>
        onboarding.tutorial.ci_outro.commit.why.github
      </p>
    </div>
  </div>
  <div
    className="display-flex-row huge-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/refresh.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.ci_outro.refresh
        </strong>
      </p>
      <p>
        onboarding.tutorial.ci_outro.refresh.why
      </p>
    </div>
  </div>
</div>
`;

exports[`should render correctly: without branch 1`] = `
<div
  className="abs-width-600"
>
  <p
    className="big-spacer-bottom"
  >
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "all_set",
        ]
      }
      translationKey="onboarding.tutorial.ci_outro.all_set"
    />
  </p>
  <div
    className="display-flex-row big-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/commit.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.ci_outro.commit
        </strong>
      </p>
      <p>
        onboarding.tutorial.ci_outro.commit.why.no_branches
      </p>
    </div>
  </div>
  <div
    className="display-flex-row huge-spacer-bottom"
  >
    <div>
      <img
        alt=""
        className="big-spacer-right"
        src="/images/tutorials/refresh.svg"
        width={30}
      />
    </div>
    <div>
      <p
        className="little-spacer-bottom"
      >
        <strong>
          onboarding.tutorial.ci_outro.refresh
        </strong>
      </p>
      <p>
        onboarding.tutorial.ci_outro.refresh.why
      </p>
    </div>
  </div>
</div>
`;
